# PoetrySlam

./: Makefile  README.md  pyproject.toml
.github/workflows/: frontend.yaml  main.yml
PoetrySlam/: database.py  poetryslam.py  settings.py
PoetrySlam/api/v1/endpoints/: poetryslam_routes.py
poetryslam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/backend/: local.db  pyproject.toml
src/backend/PoetrySlam/: crud.py  deps.py  mixins.py  models.py  schemas.py  server.py
src/backend/PoetrySlam/api/v1/: __init__.py
src/backend/PoetrySlam/api/v1/endpoints/: poetryslam_routes.py
src/frontend/: package.json
src/frontend/pages/: _app.tsx
src/frontend/poetryslam/: .eslintrc.json  package.json
src/frontend/poetryslam/public/: index.html
src/frontend/poetryslam/src/: App.js
src/frontend/poetryslam/src/components/: ForgotPassword.js  Home.js  Login.js  Navbar.js  Navigation.js  Register.js  Userform.js  Userpoemfeed.js  Users.js
src/frontend/styles/: theme.tsx
tests/: test_poetryslam.py
