[tool.poetry]
name = "PoetrySlam"
version = "0.1.0"
description = ""
authors = ["bharathpadmaraju <bharath.k.padmaraju@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
